// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Section Renders without exploding as .about 1`] = `
<section
  class="jsx-483107097 about"
/>
`;

exports[`Component: Section Renders without exploding as .booking 1`] = `
<section
  class="jsx-483107097 booking"
/>
`;

exports[`Component: Section Renders without exploding as .gallery 1`] = `
<section
  class="jsx-483107097 gallery"
/>
`;

exports[`Component: Section Renders without exploding as .services 1`] = `
<section
  class="jsx-483107097 services"
/>
`;
